<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/vladescu_alexandra_bianca_til_judet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/vladescu_alexandra_bianca_tiet_judet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/vladescu_alexandra_bianca_hint_judet" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/vladescu_alexandra_bianca_til_oras"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vladescu_alexandra_bianca_til_judet">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/vladescu_alexandra_bianca_tiet_oras"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/vladescu_alexandra_bianca_hint_oras" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/vladescu_alexandra_bianca_til_adresa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vladescu_alexandra_bianca_til_oras">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/vladescu_alexandra_bianca_tiet_adresa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/vladescu_alexandra_bianca_hint_adresa" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/vladescu_alexandra_bianca_tv_pacienti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vladescu_alexandra_bianca_pacienti"
        android:textColor="@color/blue"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vladescu_alexandra_bianca_til_adresa"
        android:gravity="start" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/vladescu_alexandra_bianca_til_pacient_nume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vladescu_alexandra_bianca_tv_pacienti">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/vladescu_alexandra_bianca_tiet_pacient_nume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/vladescu_alexandra_bianca_nume_pacient" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/vladescu_alexandra_bianca_til_pacient_telefon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vladescu_alexandra_bianca_til_pacient_nume">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/vladescu_alexandra_bianca_tiet_pacient_telefon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/vladescu_alexandra_bianca_telefon" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/vladescu_alexandra_bianca_til_pacient_cnp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vladescu_alexandra_bianca_til_pacient_telefon">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/vladescu_alexandra_bianca_tiet_pacient_cnp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/vladescu_alexandra_bianca_cnp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Switch
        android:id="@id/vladescu_alexandra_bianca_pacient_rezultat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/vladescu_alexandra_bianca_rezultat"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vladescu_alexandra_bianca_til_pacient_cnp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        android:id="@+id/vladescu_alexandra_bianca_btn_adauga_pacient"
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/vladescu_alexandra_bianca_adauga_pacient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vladescu_alexandra_bianca_pacient_rezultat" />


    <Button
        android:id="@+id/vladescu_alexandra_bianca_btn_adauga"
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/vladescu_alexandra_bianca_btn_adauga_centru"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vladescu_alexandra_bianca_btn_adauga_pacient" />


</androidx.constraintlayout.widget.ConstraintLayout>